[package]
authors = ["xiugaze <calebandreano@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "libcsp-rs"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.0"
cortex-m-rtic-macros = "1.1.5" 
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.5.0"
rtic-monotonic = "1.0.0"
rtic-core = "1.0.0"
heapless = "0.7.7"
bare-metal = "1.0.0"

lm3s6965 = "0.1.3"
systick-monotonic = "1.0.0"

[dependencies.stm32f4]
features = ["stm32f446", "rt"]
version = "0.15.1"

[dependencies.panic-semihosting]
features = ["exit"]
version = "0.6.0"


# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "libcsp-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

