[package]
authors = ["xiugaze <calebandreano@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "libcsp-rs"
version = "0.1.0"

[dependencies]
cortex-m = "^0.7.1"
cortex-m-rt = "0.7.2"
cortex-m-rtic-macros = "1.1.5" 
cortex-m-rtic = "1.1.3"
cortex-m-semihosting = "0.5.0"
rtic-monotonic = "1.0.0"
rtic-core = "1.0.0"
heapless = "0.7.7"
bare-metal = "1.0.0"

panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }

#lm3s6965 = "0.1.3"
systick-monotonic = "1.0.0"

[dependencies.stm32f4xx-hal]
version = "0.14.0"
features = ["stm32f439"]

#[dependencies.stm32f4]
#features = ["stm32f446", "rt"]
#version = "0.15.1"

[dependencies.panic-semihosting]
features = ["exit"]
version = "0.6.0"

# this lets you use `cargo fix`!
[[bin]]
name = "libcsp-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

